<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/Note"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/addbtn"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rec"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:text="Note Pro"
                android:textColor="#06CDE6"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/Logout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="17dp"

                android:background="#06CDE6"
...
                android:background="#06CDE6"
                android:layout_weight="1"

                android:src="@drawable/baseline_person_add_alt_1_24" />

            <TextView
                android:id="@+id/user"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="#06CDE6"
                android:ellipsize="end"
                android:ems="11"
                android:singleLine="true"
                android:maxLines="1"
                android:padding="12dp"
                android:text="mukeshkumar.ee19@bitsathy.ac.in"
                android:textColor="#FFFDFD"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/DeleteAllbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#06CDE6"
                android:padding="10dp"
                app:srcCompat="@drawable/baseline_delete_24" />
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Mutlidelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#00BCD4"
        android:clickable="true"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="288dp"
        android:text="Make Notes and Make it Easy"
        android:textColor="#090000"
...
