...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/Login"
    tools:context=".Activites.Login_Page">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
...
            android:textSize="32dp"
            android:textStyle="bold"
            android:id="@+id/get"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/Login_Email_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/get"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded"
            android:drawableTint="#0E0000"
...
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/Login_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/Login_Email_id"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded"
            android:fontFamily="monospace"
...
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:textColor="#0CD1EA"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/Login_Password"/>
        <Button
            android:id="@+id/Login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/forgetPAssword"
            android:layout_marginTop="25dp"

            android:backgroundTint="#1EDBF3"
...
